src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>gaconnector_Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Device__c</fullName>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Campaign__c</fullName>
        <label>First Click Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Channel__c</fullName>
        <label>First Click Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Content__c</fullName>
        <label>First Click Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Landing_Page__c</fullName>
        <label>First Click Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Medium__c</fullName>
        <label>First Click Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Referrer__c</fullName>
        <label>First Click Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Source__c</fullName>
        <label>First Click Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Term__c</fullName>
        <label>First Click Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Google_Analytics_Client_ID__c</fullName>
        <label>Google Analytics Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Google_Analytics_Link__c</fullName>
        <formula>HYPERLINK( (&quot;https://analytics.google.com/analytics/web/#report/visitors-user-activity/a72840801w110617423p115383936/%3F_r.userId%3D&quot; &amp; gaconnector_Google_Analytics_Client_ID__c &amp; &quot;%26_r.userListReportStates%3D%26_r.userListReportId%3Dvisitors-legacy-user-id/&quot;), &quot;Open in Google Analytics&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Analytics Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_IP_Address__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Campaign__c</fullName>
        <label>Last Click Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Channel__c</fullName>
        <label>Last Click Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Content__c</fullName>
        <label>Last Click Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Landing_Page__c</fullName>
        <label>Last Click Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Medium__c</fullName>
        <label>Last Click Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Referrer__c</fullName>
        <label>Last Click Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Source__c</fullName>
        <label>Last Click Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Term__c</fullName>
        <label>Last Click Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Latitude_from_IP__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Location_approx__c</fullName>
        <formula>HYPERLINK(&quot;https://maps.google.com/maps?q=loc:&quot; &amp;  gaconnector_Latitude_from_IP__c  &amp; &quot;,&quot; &amp; (gaconnector_Longitude__c), &quot;Open in Google Maps&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location (approx.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Number_of_Website_Visits__c</fullName>
        <label>Number of Website Visits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Operating_System__c</fullName>
        <label>Operating System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Pages_visited__c</fullName>
        <label>Pages visited</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Spent_on_Website__c</fullName>
        <label>Time Spent on Website</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Spent_on_Website_formul__c</fullName>
        <formula>TEXT(ROUND(gaconnector_Time_Spent_on_Website__c / 60000,0)) &amp; &quot;:&quot; &amp; 
TEXT(MOD(ROUND(gaconnector_Time_Spent_on_Website__c / 1000,0), 60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent on Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Encoded_Rating__c</fullName>
        <formula>RPAD(&apos;4&apos;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_3_Threshold__c,&apos;4&apos;)+RPAD(&apos;3&apos;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_2_Threshold__c-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_3_Threshold__c,&apos;3&apos;)+RPAD(&apos;2&apos;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_1_Threshold__c-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_2_Threshold__c,&apos;2&apos;)+RPAD(&apos;1&apos;,101-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_1_Threshold__c,&apos;1&apos;)</formula>
        <label>Infer Encoded Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Personas__c</fullName>
        <label>Infer: Profiles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Profiles_Short__c</fullName>
        <label>Infer: Profiles (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Rating__c</fullName>
        <formula>TRIM(SUBSTITUTE(MID(CASE(FLOOR(infer3__Score_Index__c/255),0,infer3__Score_Object_ID__r.infer3__Rating_0__c,1,infer3__Score_Object_ID__r.infer3__Rating_1__c,2,infer3__Score_Object_ID__r.infer3__Rating_2__c,3,infer3__Score_Object_ID__r.infer3__Rating_3__c,4,infer3__Score_Object_ID__r.infer3__Rating_4__c,5,infer3__Score_Object_ID__r.infer3__Rating_5__c,6,infer3__Score_Object_ID__r.infer3__Rating_6__c,null),1+MOD(infer3__Score_Index__c,255),1),&apos;^&apos;,&apos; &apos;))</formula>
        <label>Infer: Fit Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Score__c</fullName>
        <formula>VALUE(TRIM(SUBSTITUTE(MID(CASE(FLOOR(infer3__Score_Index__c/85),0,infer3__Score_Object_ID__r.infer3__Score_0__c,1,infer3__Score_Object_ID__r.infer3__Score_1__c,2,infer3__Score_Object_ID__r.infer3__Score_2__c,3,infer3__Score_Object_ID__r.infer3__Score_3__c,4,infer3__Score_Object_ID__r.infer3__Score_4__c,5,infer3__Score_Object_ID__r.infer3__Score_5__c,6,infer3__Score_Object_ID__r.infer3__Score_6__c,7,infer3__Score_Object_ID__r.infer3__Score_7__c,8,infer3__Score_Object_ID__r.infer3__Score_8__c,9,infer3__Score_Object_ID__r.infer3__Score_9__c,10,infer3__Score_Object_ID__r.infer3__Score_10__c,11,infer3__Score_Object_ID__r.infer3__Score_11__c,12,infer3__Score_Object_ID__r.infer3__Score_12__c,13,infer3__Score_Object_ID__r.infer3__Score_13__c,14,infer3__Score_Object_ID__r.infer3__Score_14__c,15,infer3__Score_Object_ID__r.infer3__Score_15__c,16,infer3__Score_Object_ID__r.infer3__Score_16__c,17,infer3__Score_Object_ID__r.infer3__Score_17__c,18,infer3__Score_Object_ID__r.infer3__Score_18__c,null),1+3*MOD(infer3__Score_Index__c,85),3),&apos;^&apos;,&apos; &apos;)))</formula>
        <label>Infer: Fit Score [0-100]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Won_Amount__c</fullName>
        <description>The Amount on this Opportunity if this Opportunity is Won.</description>
        <formula>IF(IsWon, Amount, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Amount on this Opportunity if this Opportunity is Won.</inlineHelpText>
        <label>Infer: Won Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>infer3__Score_Index__c</fullName>
        <label>Infer Score Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Score_Object_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Score Object ID</label>
        <referenceTo>infer3__Score_Object__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Score_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer3__Score_Snapshot__c</fullName>
        <description>A saved copy of the score, if the &quot;Update Opportunity with Score Update&quot; option is enabled. This field is only intended for custom triggers or third-party systems that can&apos;t track formula fields.</description>
        <inlineHelpText>A saved copy of the score, if the &quot;Update Opportunity with Score Update&quot; option is enabled. This field is only intended for custom triggers or third-party systems that can&apos;t track formula fields.</inlineHelpText>
        <label>Infer Score Snapshot NOT FOR LAYOUT</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer_signals__Infer_Smart_Signals_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Smart Signals Record</label>
        <referenceTo>infer_signals__Infer_Smart_Signals_Record__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_city__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_5__c</formula>
        <label>Infer: City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_company_size__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_1__c</formula>
        <label>Infer: Company Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_competitors__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_29__c</formula>
        <label>Infer: Competitors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_country__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_10__c</formula>
        <label>Infer: Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_email_type__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_7__c</formula>
        <label>Infer: Email Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_eloqua__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_25__c</formula>
        <label>Infer: Has Eloqua</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_hubspot__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_28__c</formula>
        <label>Infer: Has Hubspot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_marketo__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_26__c</formula>
        <label>Infer: Has Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_pardot__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_27__c</formula>
        <label>Infer: Has Pardot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_ssl__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_18__c</formula>
        <label>Infer: Has SSL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_revenue__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_3__c</formula>
        <label>Infer: Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_sector__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_4__c</formula>
        <label>Infer: Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_state__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_12__c</formula>
        <label>Infer: State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_uses_aws__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_19__c</formula>
        <label>Infer: Uses AWS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_website_rank__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_6__c</formula>
        <label>Infer: Website Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_zip__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_8__c</formula>
        <label>Infer: Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadfeederapp__LatestWebsiteVisit__c</fullName>
        <label>Latest Leadfeeder Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>leadfeederapp__LeadfeederLink__c</fullName>
        <label>View in Leadfeeder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mql_infer__c</fullName>
        <label>mql infer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24_Short__c</fullName>
        <description>Shows the current local time (without date) of the Account associated with the Opportunity in 24-hr format.</description>
        <formula>Account.tz__Local_Time_24_Short__c</formula>
        <inlineHelpText>Shows the local time (without date) of the Account associated with the Opportunity in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24__c</fullName>
        <description>Shows the current local time of the Account associated with the Opportunity in 24-hr format.</description>
        <formula>Account.tz__Local_Time_24__c</formula>
        <inlineHelpText>Shows the local time of the Account associated with the Opportunity in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Short__c</fullName>
        <description>Shows the current local time (without date) of the Account associated with the Opportunity.</description>
        <formula>Account.tz__Local_Time_Short__c</formula>
        <inlineHelpText>Shows the local time (without date) of the Account associated with the Opportunity.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time of the Account associated with the Opportunity.</description>
        <formula>Account.tz__Local_Time__c</formula>
        <inlineHelpText>Shows the local time of the Account associated with the Opportunity.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full__c</fullName>
        <description>Full timezone name of the Account associated with the Opportunity.</description>
        <formula>Account.tz__Timezone_Full__c</formula>
        <inlineHelpText>Full timezone name of the Account associated with the Opportunity.</inlineHelpText>
        <label>Timezone (Full)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Timezone abbreviation (PST, EST,etc..) of the Account associated with the Opportunity.</description>
        <formula>Account.tz__Timezone__c</formula>
        <inlineHelpText>Timezone abbreviation (PST, EST,etc..) of the Account associated with the Opportunity.</inlineHelpText>
        <label>Timezone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zuora Config</label>
        <referenceTo>zqu__ZuoraConfig__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>infer3__Infer_Score__c</columns>
        <columns>infer3__Infer_Rating__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Opportunities_JME</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>ISR_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Chapa,lcriv,bosca,dwill,Napio</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Value Proposition,Demo,Created,Negotiation/Review,Proposal/Price Quote</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/3/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>6/6/2018 12:00 AM</value>
        </filters>
        <label>ISR Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Lost</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost,Closed Lost: Dead,Closed Lost: Duplicate</value>
        </filters>
        <label>Lost</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>All_Agents_with_last_7_days_activity__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Incoming_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Created</value>
        </filters>
        <label>My Incoming Opportunities</label>
        <sharedTo>
            <role>Account_Executive_Americas</role>
            <role>Account_Executive_Europe</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Non_Trial_Signup</fullName>
        <active>true</active>
        <businessProcess>Master Sales Process</businessProcess>
        <label>Non Trial Signup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trial_Signup</fullName>
        <active>true</active>
        <businessProcess>Master Sales Process</businessProcess>
        <label>Trial Signup</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cannot_change_closedate_of_closed_opp</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;),ISPICKVAL(StageName, &quot;Closed Won&quot;) , ISCHANGED( CloseDate ), $Profile.Name !=&quot;System Administrator&quot; )</errorConditionFormula>
        <errorMessage>You cannot change close date of Closed Won Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_open_won_opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name !=&quot;System Administrator&quot;,  ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Won&quot;),NOT(ISPICKVAL(StageName,&quot;Closed Won&quot;))  )</errorConditionFormula>
        <errorMessage>You cannot re open Closed Won Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Opportunity_Amount</fullName>
        <active>false</active>
        <description>If opportunity is marked as closed  then amount cannot be changed.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp;  Amount!= PRIORVALUE(Amount) &amp;&amp;    (ISPICKVAL(StageName, &quot;Closed Won&quot;) || ISPICKVAL(StageName, &quot;Closed Lost&quot;)) &amp;&amp;  NOT($Profile.Name ==&quot;Integration&quot;)</errorConditionFormula>
        <errorMessage>You cannot change amount of a Closed Opportunity. Contact System Administrator to make any change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Competitor_required_for_opportunity</fullName>
        <active>false</active>
        <errorConditionFormula>AND( NOT( CONTAINS( $User.FirstName , &quot;Backend&quot;) ) , ISNEW(),  ISNULL( Competitors__c ) )</errorConditionFormula>
        <errorMessage>To create this opportunity please define its competitors.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Current_System_must_be_defined</fullName>
        <active>false</active>
        <errorConditionFormula>AND( NOT( CONTAINS( $User.FirstName , &quot;Backend&quot;) ) , ISNEW(),  ISBLANK(  TEXT( Current_System__c)   ) )</errorConditionFormula>
        <errorMessage>In order to create this opportunity please define Current System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ownership_transfer_restriction</fullName>
        <active>false</active>
        <description>Only system administrators are allowed to change the ownership.</description>
        <errorConditionFormula>AND(ISCHANGED(OwnerId),$Profile.Name &lt;&gt; &quot;System Administrator&quot;, NOT(BEGINS($UserRole.Name, &quot;Region Leader&quot;)))</errorConditionFormula>
        <errorMessage>You are not allowed to changed ownership. Contact System Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TCV_amount_required_on_closed_won</fullName>
        <active>false</active>
        <description>TCV amount should be supplied while marking an opportunity as closed won.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISPICKVAL( StageName , &quot;Closed Won&quot;) &amp;&amp; ISBLANK(TCV__c)</errorConditionFormula>
        <errorMessage>Please supply TCV amount before marking this opportunity as Closed Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Term_Change_Opp_cannot_have_amount</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Type,&quot;Term Change&quot;), NOT(ISNULL(Amount)) )</errorConditionFormula>
        <errorMessage>Amount for term change opportunity should always be NULL. Please remove the value from amount field.</errorMessage>
    </validationRules>
</CustomObject>